--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.348.0",
     "@aws-sdk/util-dynamodb": "^3.369.0",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.7",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
@@ -18,8 +25,6 @@
     "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
-    "flowbite": "^1.6.6",
-    "flowbite-react": "^0.4.9",
     "next": "13.4.4",
     "openai": "^3.2.1",
     "react": "18.2.0",
@@ -31,7 +36,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2"
+    "postcss": "^8.4.24"
   }
 }
